--- a/SChat/SChat.csproj
+++ b/SChat/SChat.csproj
@@ -76,6 +76,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>EDM.tt</DependentUpon>
     </Compile>
+    <Compile Include="LoginWindow.xaml.cs">
+      <DependentUpon>LoginWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Message.cs">
       <DependentUpon>EDM.tt</DependentUpon>
     </Compile>
@@ -87,6 +90,10 @@
       <DependentUpon>EDM.tt</DependentUpon>
     </Compile>
     <Page Include="ChatPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="LoginWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
